--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^7.6.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
